# AgentXploit

./: .gitignore  README.md  example_env.md  pyproject.toml
Anewbenchmark/: .env.example  .gitignore  README.md  pyproject.toml
Anewbenchmark/attack-scripts/openclaw-media-lfi/: Dockerfile
Anewbenchmark/attack-scripts/openclaw-path-validation/: Dockerfile  compose.yml
Anewbenchmark/benchmarks/agentscope-security-bench/: IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md
Anewbenchmark/benchmarks/autogpt-security-bench/: RESTRUCTURE_SUMMARY.md
Anewbenchmark/benchmarks/dbgpt-security-bench/: README.md
Anewbenchmark/benchmarks/gpt_academic-security-bench/: README.md
Anewbenchmark/benchmarks/langchain-bench/: IMPLEMENTATION_SUMMARY.md  README.md
Anewbenchmark/benchmarks/lobechat-bench/: README.md
Anewbenchmark/benchmarks/metagpt-security-bench/: README.md
Anewbenchmark/codex_baseline/: README.md  install_codex.sh  run_baseline_codex.sh  run_codex.sh
Anewbenchmark/src/AgentXploit/: cli.py
Anewbenchmark/src/analysis_agent/: .env.example  .todos.json  README.md  analysis_agent.py  analysis_agent.py.backup_verbose  config.yaml
Anewbenchmark/src/exploiter_agent/: .env.example  GPT_RESEARCHER_SETUP.md  __init__.py  analyze_codex_reports.py  analyze_reports.py  cli.py  config.example.yaml  exploiter_agent.py
src/AgentXploit/: agent.py  cli.py
src/AgentXploit/agents/: __init__.py  analysis_agent.py  dynamic_focus_manager.py  exploit_agent.py  exploration_strategies.py  focus_tracker.py  llm_focus_decision.py  mcp_agent.py  root_agent.py
src/AgentXploit/config/: agent_config.py  env_template.py  settings.py
src/AgentXploit/enums/: injection_types.py
src/AgentXploit/tools/: __init__.py  prompt_manager.py  unified_injection_tool.py
src/AgentXploit/utils/: __init__.py  prompt_injection_seeds.py  prompt_templates.py
src/analysis_agent/: .todos.json  CRITICAL_FIX.md  IMPLEMENTATION_SUMMARY.md  README.md  SIMPLE_PROMPT.py  SIMPLIFIED_PROMPTS.md  __init__.py  analysis_agent.py  cli.py  test_analysis.py
src/analysis_agent/.claude/: settings.local.json
src/analysis_agent/codex_part/: run_codex_for_analysis.sh  run_codex_for_exploit.sh
src/analysis_agent/legacy_docs/: FINAL_security_analysis_gpt-researcher_20251119_104245.json  analysis_20251112_101249.json  analysis_20251112_155514.json  analysis_20251119_104253.json  analysis_20260119_234941.json  analysis_20260120_000153.json  analysis_20260120_174003.json  analysis_20260120_174636.json  incremental_analysis_OpenHands_20260119_234601.json  incremental_analysis_OpenHands_20260120_000058.json  incremental_analysis_gpt-researcher_20251119_094216.json  incremental_analysis_gpt-researcher_20251119_103355.json
src/analysis_agent/reports/: FINAL_security_analysis_gpt-researcher_20251112_223928.json  analysis_1689_20260128_222836.json  analysis_20251110_091024.json  analysis_20251110_091904.json  analysis_20251112_152755.json  analysis_20251112_223933.json  analysis_20251119_094421.json  analysis_20260120_180959.json  analysis_20260127_191316.json  analysis_20260127_194913.json  analysis_20260127_201026.json  analysis_20260127_202234.json  analysis_20260127_203235.json  analysis_20260127_210634.json  analysis_20260127_214037.json  analysis_20260127_214402.json  analysis_20260127_221153.json  analysis_20260127_234000.json  analysis_20260128_223616.json  analysis_20260128_231243.json  (+28 more)
src/exploiter_agent/: __init__.py  cli.py  config.md  config.yaml  exploiter_agent.py  test_logging.py
src/injection_agent/: __init__.py  agent.py  cli.py
(+842 files in other folders)
